<resources>
    <color name="white">#FFFFFF</color>
    <string name="app_name">parki</string>
    <string name="name_error">فضلا قم بإدخال الاسم</string>
    <string name="phone_error">فضلا قم بإدخال رقم الهاتف </string>
    <string name="email_error">فضلا قم بإدخال البريد الالكتروني</string>
    <string name="error_invalid_email">البريد الالكتروني غير صحيح</string>
    <string name="password_error">فضلا قم بإدخال كلمة المرور</string>
    <string name="car_error">فضلا قم إدخال نوع السيارة </string>
    <string name="carnum_error">فضلا قم بإدخال رقم لوحة السيارة</string>
    <string name="error_invalid_password">كلمة المرور غير صحيحة ادنى حد 6 حروف</string>
    <string name="title_activity_maps">Parki App</string>


    <string name="sign_out">تسجيل الخروج</string>
    <string name="no_internet">لا يوجد اتصال بالانترنت</string>
    <string name="login_failed">البريد الالكتروني او كلمة المرور خطا</string>
    <string name="required_field">الحقل مطلوب</string>
    <string name="valid_email">ادخل بريد الكتروني صحيح</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="do_not_have_account">ليس لديك حساب؟</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="sign_up_now">اشترك الآن</string>
    <string name="name">الإسم</string>
    <string name="mobile">رقم الجوال</string>

    <string name="car_type">نوع السياره</string>
    <string name="car_number">رقم السياره</string>
    <string name="have_account">لديك حساب؟</string>
    <string name="log_in_now">سجل دخول</string>
    <string name="change_password">تغير كلمة المرور</string>

</resources>
