<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/pic3"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_name_edit_text_background"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_name_edit_text_background"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/txtpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_name_edit_text_background"
            android:hint="@string/password"
            android:gravity="right"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/txtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:background="@drawable/user_name_edit_text_background"
            android:hint="@string/mobile"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/txtcar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/user_name_edit_text_background"
            android:hint="@string/car_type"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtcarnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/user_name_edit_text_background"
            android:hint="@string/car_number"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_button_background"
            android:gravity="center"
            android:minHeight="35dp"
            android:text="@string/sign_up_now"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:includeFontPadding="false"
                android:padding="5dp"
                android:text="@string/have_account"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/txtlog"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/log_in_now"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>
